fix a few alignment issues on page quem-somos

--- a/css/quem-somos.css
+++ b/css/quem-somos.css
@@ -19,7 +19,7 @@ main p {
 .about {
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	/* align-items: center; */
 	gap: 10px;
 	margin-bottom: 60px;
 	margin-top: 60px;
@@ -27,23 +27,26 @@ main p {
 
 .about .img {
 	flex: 2;
-	rotate: 90deg;
+	display: flex;
+	justify-content: center;
 }
 
-.about .img {
-	flex: 2;
+.about .img img {
+	width: 200px;
+	height: 100%;
+	object-fit: cover;
 }
 
 .about .info {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	flex: 3;
+	overflow-x: hidden;
 }
 
 .about .info p {
-	margin: 0 40px;
-	margin-top: 60px;
-	margin-bottom: -20px;
+	padding: 20px;
 }
 
 .about .info img {
@@ -64,10 +67,13 @@ main p {
 }
 
 .about .upper-logo {
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
 	display: flex;
 	justify-content: center;
 	align-items: border-box;
-	margin-bottom: -30px;
 }
 
 .about .upper-logo img {
@@ -144,7 +150,6 @@ div.stats h3 {
 div.content {
 	flex: 2;
 	margin-top: 40px;
-	margin-bottom: -40px;
 }
 
 .pilares h3 {
@@ -232,18 +237,17 @@ div.content {
 	transform:translateY(110px);
 }
 
+div.nossa-historia {
+	/* padding: 0px 200px; */
+}
+
 div.nossa-historia p{
-	margin-top: 60px;
-	margin-bottom:40px;
-	margin-left: 250px;
-	margin-right:250px;
+	padding: 50px 200px;
 }
 
 div.nossa-historia h2{
+	padding: 20px;
 	font-size: 3.5rem;
-	margin-bottom: 20px;
-	margin-left: 200px;
-	margin-right: 200px;
 	font-family: "Open Sans", sans-serif;
 	font-weight: 600;
 	font-style: normal;
